--- a/render.yaml
+++ b/render.yaml
@@ -1,5 +1,5 @@
 services:
-  - name: アプリ名
+  - name: MLAPP
     type: web
     env: python
     repo: https://github.com/git@github.com:masamichi0418/render.git 
@@ -7,7 +7,7 @@ services:
     plan: free
     region: singapore
     buildCommand: pip3 install -r requirements.txt && python manage.py collectstatic --no-input && python manage.py migrate
-    startCommand: gunicorn アプリ名.wsgi:application
+    startCommand: gunicorn MLAPP.wsgi:application
     envVars:
       - key: SECRET_KEY
         generateValue: true
@@ -15,10 +15,10 @@ services:
         value: 3.10.7
       - key: DATABASE_URL
         fromDatabase:
-          name: データベース名
+          name: MLDB
           property: connectionString
 
 databases:
-  - name: データベース名
+  - name: MLDB
     plan: free
     region: singapore
